homeautomation/mass/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      deployment: mass
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: mass
      annotations:
        k8s.v1.cni.cncf.io/networks: media-vlan
    spec:
      containers:
        - image: music-assistant
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /info
              port: 8095
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          name: mass-server
          ports:
            - containerPort: 8095
              name: mass-http
              protocol: TCP
            - containerPort: 8098
              name: streamserver
              protocol: TCP
            - containerPort: 3483
              name: slimproto-tcp
              protocol: TCP
            - containerPort: 3483
              name: slimproto-udp
              protocol: UDP
            - containerPort: 9000
              name: slimproto-json
              protocol: TCP
            - containerPort: 9090
              name: slimproto-raw
              protocol: TCP
          resources:
            requests:
              memory: 512Mi
              cpu: 10m
            limits:
              memory: 2Gi
              cpu: 100m
          volumeMounts:
            - mountPath: /data
              name: mass-config
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: mass-config
          persistentVolumeClaim:
            claimName: mass-config
status: {}
