homeautomation/mass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mass
spec:
  ports:
    - name: mass-http
      port: 8095
      protocol: TCP
      targetPort: mass-http
  selector: {}
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mass-media
  annotations:
    metallb.universe.tf/allow-shared-ip: "music"
spec:
  ports:
    - port: 8098
      name: streamserver
      protocol: TCP
    - port: 3483
      name: slimproto-tcp
      protocol: TCP
    - port: 9000
      name: slimproto-json
      protocol: TCP
    - port: 9090
      name: slimproto-raw
      protocol: TCP
  selector: {}
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: mass-media-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "music"
spec:
  ports:
    - port: 3483
      name: slimproto-udp
      protocol: UDP
  selector: {}
  sessionAffinity: None
  type: LoadBalancer
